@@ -20,6 +20,8 @@ Please enable assertions in your compiler settings using the flag `-ea`.
 
 To enable assertions, go to **File > Preferences > Build, Execution, Deployment > Compiler** and type `-ea` in the field labeled "Shared build process VM options".
 
+To use *Swift for Java* in a scratch file, type `-ea --enable-preview` instead in the aforementioned field.
+
 ### Setup
 Please ensure that both your version of IntelliJ IDEA and version of Java are updated to the most recent versions. Also, please ensure that your project language level is set to the highest number (not including *X - Experimental Features*).
 
